[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
psycopg2 = "^2.9.5"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

